<resources>
    <string name="app_name">libsked</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="edit_password">Edit Password</string>
    <string name="new_password_confirm">New Password Confirm:</string>
    <string name="new_password">New Password:</string>
    <string name="old_password">Old Password:</string>
    <string name="room_x">Room X</string>
    <string name="room_2">Room 2</string>
    <string name="room_3">Room 3</string>
    <string name="room_4">Room 4</string>
    <string name="library">LIBRARY</string>
    <string name="biblioteca_barbosa_romero_da_escola_superior_de_tecnologia_e_gest_o_ipvc">Biblioteca Barbosa Romero da Escola Superior de Tecnologia e Gestão - IPVC</string>
    <string name="room_1">Room 1</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="name">Name: %1$s</string>
    <string name="number">Number: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="email_sign_in">Email</string>
    <string name="password_sign_in">Password</string>
    <string name="mock_string">What is this?</string>
    <string name="continue_continue">Continue</string>
    <string name="remember_password">Remember Password!</string>
    <string name="table">Table:</string>
    <string name="chairs">Chairs:</string>
    <string name="sockets">Sockets?:</string>
    <string name="occupation">Occupation</string>
    <string name="make_a_reservation">Make a reservation</string>
    <string name="extend_reservation">Extend reservation 30 min.?</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
    <string name="appointment">Appointments</string>
    <string name="apply">Apply</string>
    <string name="location_title">Location</string>
    <string name="link_to_maps">https://goo.gl/maps/1bV8xV9vMENBbZbN6</string>
    <string name="simple_image_of_the_library">Simple image of the library</string>
    <string name="active_reservation">One active reservation allowed</string>
    <string name="multiple_reservation">One future reservation at a time</string>
</resources>