<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA41E"
    tools:context=".authentication.ForgotPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/mock_string"

        />

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/square_white"
        android:padding="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"

        />
    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/tv_heading"
        android:background="@drawable/shape"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="266dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text"
                    android:gravity="center"
                    android:hint="@string/email_sign_in"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    android:autofillHints="emailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/bt_continue"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_text"
                android:text="@string/continue_continue"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_email"
                app:layout_constraintWidth_percent="0.7" />

            <LinearLayout
                android:id="@+id/layout_remember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_continue"
                app:layout_constraintWidth_percent="1.0">

                <TextView
                    android:id="@+id/tv_already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_password"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/bt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</RelativeLayout>