<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".authentication.Login">


    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"/>

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/topView"
        android:background="@drawable/ic_wave" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView

            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Login"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_marginLeft="240dp"
            app:srcCompat="@drawable/usericon" />


    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        android:theme="@style/MyTextInputLayout_overlay">

        <EditText

            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="260dp"
            android:layout_marginRight="20dp"
            android:autofillHints="emailAddress"
            android:drawablePadding="10dp"
            android:hint="@string/email_sign_in"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et1"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@android:color/transparent">


        <EditText

            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:hint="@string/password_sign_in"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColorHint="@color/black"
            android:autofillHints="password"
            >


        </EditText>


    </com.google.android.material.textfield.TextInputLayout>


    <TextView

        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />


    <Button

        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/et2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="113dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView

        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>